--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     position: fixed;
     z-index: 999;
     font-size: 1.2rem;
-    background: #171e27;
+    /* background: #171e27; */
     width: 100%;
 }
 
@@ -13,7 +13,7 @@
     align-items: center;
     height: 80px;
     max-width: 1500px;
-    gap: 550px;
+    gap: 1250px;
     margin-left: 175px;
     font-family: 'Hanken Grotesk', sans-serif;
     font-weight: 200;
