--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,9 @@
     font-size: 1.2rem;
     /* background: #171e27; */
     width: 100%;
+    background: rgba(23, 30, 39, 0.6); 
+    backdrop-filter: blur(5px); 
+    -webkit-backdrop-filter: blur(10px); 
 }
 
 .navbar-container {
