--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -39,7 +39,8 @@
     display: flex;
     flex-direction: column;
     margin-left: -290px;
-    width: 1200px; /* for gap */
+    width: 1200px;
+    /* for gap */
 }
 
 .font-style-1 {
@@ -99,8 +100,9 @@
 .intro-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 80px;
-    width: 400px;
+    font-size: 100px;
+    width: 500px;
+    letter-spacing: 3px;
 }
 
 .intro-content {
@@ -112,30 +114,34 @@
 .work-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 120px;
+    font-size: 140px;
     margin-bottom: 100px;
     margin-left: 30px;
+    letter-spacing: 3px;
 }
 
 .work-img {
     width: 700px;
     height: 400px;
-    border-radius: 15px;
+    border-radius: 5px;
 }
 
 .work-list-div {
     display: flex;
-    width: 1000px;
+    width: 1200px;
     margin-bottom: 150px;
 }
 
 .work-list-heading {
-    font-size: 65px;
+    font-family: tusk;
+    font-weight: 100;
+    font-size: 85px;
+    letter-spacing: 2px;
     margin-right: 60px;
 }
 
 .sairama {
-    margin-left: 50px;
+    margin-left: 10px;
 }
 
 .pathway {
@@ -143,7 +149,7 @@
 }
 
 .event-radar {
- margin-left: 780px;   
+    margin-left: 600px;
 }
 
 .portals {
@@ -154,3 +160,36 @@
     width: 1800px;
 }
 
+.connect-head {
+    font-family: tusk;
+    font-weight: 100;
+    font-size: 320px;
+}
+
+.ending {
+    display: flex;
+    margin-left: -270px;
+}
+
+.ending-connect {
+    margin-right: 450px;
+}
+
+.connect-second {
+    margin-top: -140px;
+}
+
+.connect-interested-heading {
+    font-family: tusk;
+    font-weight: 100;
+    font-size: 120px;
+}
+
+.connect-button {
+    padding: 20px;
+    background: transparent;
+    color: #f5eee6;
+    margin: 10px;
+    border: #f5eee6 solid;
+    border-radius: 15px;
+}
