--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,11 @@
+html {
+    scroll-behavior: smooth;
+}
 
 .navbar {
     position: fixed;
     z-index: 999;
     font-size: 1.2rem;
-    /* background: #171e27; */
     width: 100%;
     background: rgba(23, 30, 39, 0.6); 
     backdrop-filter: blur(5px); 
