--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -106,148 +106,6 @@
     font-family: "Poppins", sans-serif;
     font-size: 26px;
 }
-/* 
-.work {
-    background-color: #fff;
-    padding-bottom: 100px;
-} 
-
-.work-heading {
-    text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 50px;
-}
-
-.work-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 80%;
-    margin: 0 auto;
-}
-
-.work-list {
-    flex: 1;
-    margin-right: 20px;
-    position: sticky;
-    top: 120px;
-}
-
-.work-item {
-    font-family: tusk;
-    font-weight: 100;
-    font-size: 100px;
-    padding: 10px;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-
-.work-item.highlight {
-    color: black;
-    position: absolute;
-    top: 250px; 
-    width: 100%;
-}
-
-.work-images {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-}
-
-.work-images img {
-    max-width: 100%;
-    margin-bottom: 20px;
-    object-fit: cover;
-    border-radius: 10px;
-    transition: transform 0.6s ease;
-}
-
-.work-images img:hover {
-    transform: scale(1.05);
-} */
-/* 
-.work-container {
-    display: flex;
-    position: relative;
-    height: 100vh;
-  }
-  
-  .work-list {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    position: fixed;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10%; 
-  }
-  
-  .work-item {
-    margin-bottom: 20px;
-    font-size: 20px;
-    cursor: pointer;
-    transition: color 0.3s ease;
-  }
-  
-  .work-item.highlight {
-    color: #FF5733; 
-    font-weight: bold;
-  }
-  
-  .work-images {
-    flex: 2;
-    margin-left: 25%;
-    padding-top: 50px;
-  }
-  
-  .work-images img {
-    width: 100%;
-    max-height: 100vh;
-    object-fit: cover;
-    margin-bottom: 50px;
-  }
-  
-
-.work-container {
-    display: flex;
-    position: relative;
-  }
-  
-  .work-list {
-    flex: 1;
-    position: sticky;
-    top: 0;
-    align-self: flex-start;
-    padding: 20px;
-    color: black;
-    margin-top: 500px;
-  }
-  
-  .work-item {
-    margin: 10px 0;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  .work-item.highlight {
-    color: #FF0000; 
-    font-weight: bold;
-  }
-  
-  .work-images {
-    flex: 3;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-  }
-  
-  .work-images img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  } */
 
 .skillset {
     margin-top: 220px;
@@ -264,18 +122,18 @@
 
 .skillset-list {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); 
+    grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: auto;
     justify-items: center;
     align-items: center;
-    gap: 20px; 
-  }
-  
-  .skillset-list-icon {
+    gap: 20px;
+}
+
+.skillset-list-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
 .connect-head {
     font-family: tusk;
@@ -284,7 +142,7 @@
 }
 
 .ending {
-    margin-top: 190px;
+    margin-top: 390px;
     display: flex;
     margin-left: -270px;
 }
@@ -351,18 +209,29 @@
     gap: 50px;
 }
 
+.footer-social a {
+    color: inherit;
+    text-decoration: none;
+}
 
+.footer-social a:hover {
+    color: inherit;
+    text-decoration: underline;
+}
 
 .work {
     background-color: #fff;
-    padding: 100px 50px;
+    padding: 150px 50px;
     color: black;
 }
 
 .work-heading {
-    text-align: center;
-    font-size: 2.5rem;
+    font-family: tusk;
+    font-weight: 100;
+    font-size: 120px;
+    letter-spacing: 1px;
     margin-bottom: 50px;
+    margin-left: 50px;
 }
 
 .work-container {
@@ -376,15 +245,14 @@
 .work-list {
     flex: 1;
     position: sticky;
-    top: 100px;
-    margin-right: 50px;
+    top: 280px;
     z-index: 2;
 }
 
 .work-item {
     font-family: tusk;
     font-weight: 100;
-    font-size: 40px;
+    font-size: 60px;
     padding: 10px 0;
     cursor: pointer;
     transition: color 0.3s ease;
@@ -392,13 +260,15 @@
 
 .work-item.highlight {
     color: #FF5733;
+    font-size: 80px;
 }
 
 .work-images {
     flex: 2;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
+    filter: brightness(50%);
 }
 
 .work-images img {
