--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,7 +20,7 @@
     position: relative;
     width: 100%;
     display: flex;
-    gap: 350px;
+    gap: 320px;
 }
 
 .home-bg {
@@ -73,12 +73,14 @@
 }
 
 .hero-intro {
-    margin-top: 700px;
     font-family: "Poppins", sans-serif;
+    font-size: 26px;
+    margin-top: 700px;
     font-size: 35px;
-    font-weight: 200;
-    line-height: 0.8;
-    width: 600px;
+    font-weight: 300;
+    line-height: 1;
+    width: 640px;
+    text-transform: uppercase;
 }
 
 .intro {
