--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,7 +20,7 @@
     position: relative;
     width: 100%;
     display: flex;
-    gap: 320px;
+    gap: 16.6vw;
 }
 
 .home-bg {
@@ -33,51 +33,51 @@
 
 .hero-creative {
     bottom: 18vh;
-    margin-top: 320px;
+    margin-top: 16.6vw;
     display: flex;
     flex-direction: column;
-    margin-left: -290px;
-    width: 1200px;
+    margin-left: -15vw;
+    width: 62.5vw;
 }
 
 .font-style-1 {
     font-family: tusk;
-    font-size: 320px;
+    font-size: 16.6vw;
     font-weight: 100;
     color: #f5eee6;
 }
 
 .font-style-2 {
     font-family: migra;
-    font-size: 70px;
+    font-size: 3.75vw;
     color: rgb(243, 219, 199);
 }
 
 .hero-yoo {
     display: flex;
-    margin-bottom: -150px;
+    margin-bottom: -7.81vw;
 }
 
 .hero-first {
-    margin-left: -400px;
-    margin-bottom: -70px;
+    margin-left: -20.83vw;
+    margin-bottom: -3.64vw;
 }
 
 .hero-third {
-    margin-left: 30px;
-    margin-top: 180px;
+    margin-left: 1.56vw;
+    margin-top: 9.375vw;
 }
 
 .hero-fourth {
-    margin-left: -15px;
+    margin-left: -0.78vw;
 }
 
 .hero-intro {
     font-family: "Poppins", sans-serif;
-    font-size: 32px;
-    margin-top: 700px;
+    font-size: 1.66vw;
+    margin-top: 36.45vw;
     line-height: 1.1;
-    width: 640px;
+    width: 33.3vw;
     text-transform: uppercase;
 }
 
@@ -85,8 +85,8 @@
     background-color: rgba(0, 0, 0, 0);
     height: auto;
     padding: 16vh 0;
-    padding-top: 350px;
-    padding-bottom: 300px;
+    padding-top: 18.2vw;
+    padding-bottom: 15.6vw;
     position: relative;
     width: 100%;
     display: flex;
@@ -96,33 +96,31 @@
 .intro-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 100px;
+    font-size: 5.2vw;
     letter-spacing: 3px;
     margin-right: auto;
-    margin-left: 350px;
+    margin-left: 18.2vw;
 }
 
 .intro-content {
-    width: 1220px;
+    width: 63.44vw;
     font-family: "Poppins", sans-serif;
-    font-size: 26px;
+    font-size: 1.352vw;
     margin-right: auto;
-    margin-left: 350px;
-    /* text-align: center; */
-
+    margin-left: 18.2vw;
 }
 
 .skillset {
-    margin-top: 220px;
+    margin-top: 11.44vw;
 }
 
 .skillset-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 120px;
+    font-size: 6.24vw;
     letter-spacing: 1px;
-    margin-bottom: 100px;
-    margin-left: 150px;
+    margin-bottom: 5.2vw;
+    margin-left: 7.8vw;
 }
 
 .skillset-list {
@@ -131,33 +129,33 @@
     grid-auto-rows: auto;
     justify-items: center;
     align-items: center;
-    gap: 20px;
+    gap: 1.04vw;
 }
 
 .skillset-list-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 1.04vw;
 }
 
 .connect-head {
     font-family: tusk;
     font-weight: 100;
-    font-size: 320px;
+    font-size: 16.64vw;
 }
 
 .ending {
-    margin-top: 190px;
-    padding-top: 150px;
+    margin-top: 9.88vw;
+    padding-top: 7.8vw;
     display: flex;
-    margin-left: -270px;
+    margin-left: -14.04vw;
     background-color: white;
     color: black;
 }
 
 .ending-connect {
-    margin-right: 450px;
+    margin-right: 23.4vw;
 }
 
 .ending-inter-foot {
@@ -166,57 +164,56 @@
 }
 
 .connect-second {
-    margin-top: -140px;
+    margin-top: -7.28vw;
 }
 
 .ending-inter-foot {
     display: flex;
     flex-direction: column;
-    gap: 180px;
+    gap: 9.36vw;
 }
 
 .connect-interested-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 120px;
+    font-size: 6.24vw;
 }
 
 .connect-button {
-    padding: 20px;
+    padding: 1.04vw;
     background: transparent;
-    /* color: #f5eee6; */
     color: black;
-    margin: 10px;
+    margin: 0.52vw;
     border: #f5eee6 solid;
-    border-radius: 15px;
+    border-radius: 0.78vw;
 }
 
 .footer {
-    margin-left: -840px;
-    margin-top: -45px;
+    margin-left: -43.68vw;
+    margin-top: -2.34vw;
 }
 
 .footer-contact {
     display: flex;
     justify-content: start;
-    gap: 20px;
-    margin-right: -650px;
-    width: 1250px;
+    gap: 1.04vw;
+    margin-right: -33.8vw;
+    width: 65vw;
     border-bottom: #f5eee6 solid 0.3px;
 }
 
 .footer-contact-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 50px;
+    font-size: 2.6vw;
     letter-spacing: 1px;
 }
 
 .footer-social {
-    margin-top: 10px;
-    margin-right: 180px;
+    margin-top: 0.52vw;
+    margin-right: 9.36vw;
     display: flex;
-    gap: 50px;
+    gap: 2.6vw;
 }
 
 .footer-social a {
@@ -231,17 +228,17 @@
 
 .work {
     background-color: #fff;
-    padding: 150px 50px;
+    padding: 7.8vw 2.6vw;
     color: black;
 }
 
 .work-heading {
     font-family: tusk;
     font-weight: 100;
-    font-size: 120px;
+    font-size: 6.24vw;
     letter-spacing: 1px;
-    margin-bottom: 50px;
-    margin-left: 50px;
+    margin-bottom: 2.6vw;
+    margin-left: 2.6vw;
 }
 
 .work-container {
@@ -255,29 +252,29 @@
 .work-list {
     flex: 1;
     position: sticky;
-    top: 200px;
+    top: 10.4vw;
     z-index: 2;
 }
 
 .work-item {
     font-family: tusk;
     font-weight: 100;
-    font-size: 60px;
-    padding: 10px 0;
+    font-size: 3.12vw;
+    padding: 0.52vw 0;
     cursor: pointer;
     transition: color 0.3s ease;
 }
 
 .work-item.highlight {
     color: #FF5733;
-    font-size: 80px;
+    font-size: 4.16vw;
 }
 
 .work-images {
     flex: 2;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.56vw;
     filter: brightness(50%);
 }
 
